--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     },
     "dependencies": {
         "@vitejs/plugin-vue": "^3.0.1",
+        "bootstrap-icons": "^1.13.1",
+        "noty": "^3.1.4",
         "vue-loader": "^17.0.0",
+        "vue-loading-overlay": "^6.0.6",
         "vue-router": "^4.1.3",
         "vuex": "^4.0.2",
         "vuex-persistedstate": "^4.1.0"
